# Task_Manager

./: app.py  grader.py  openenv.yaml  pyproject.toml  tasks.py
scripts/: validate-submission.sh
server/: app.py
