[project]
name = "task-manager"
version = "0.1.0"
description = "Task Manager agent for OpenEnv multi-mode deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "streamlit",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"