[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-env"
version = "0.1.0"
description = "Task Manager OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "flask>=3.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]